--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -7,12 +7,13 @@
 # Nadley-Nahir Mohamed <nahirmoha@gmail.com>, 2012-2013
 # Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012-2013
 # Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012
+# Volker <votdev@gmx.de>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-18 01:40+0200\n"
-"PO-Revision-Date: 2015-04-17 23:41+0000\n"
+"PO-Revision-Date: 2015-04-23 19:11+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
@@ -252,7 +253,7 @@ msgid "Address"
 msgstr "Adresse"
 
 msgid "Administrator password"
-msgstr "Mot de passe de l'adminitrateur"
+msgstr "Mot de passe de l'administrateur"
 
 msgid "Administrator: read/write, Users: no access, Others: no access"
 msgstr "Administrateur: lect./écrit., Utilisateur: pas d'accès, Autres: pas d'accès"
