--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-18 01:40+0200\n"
-"PO-Revision-Date: 2015-04-17 23:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-04-20 02:04+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -198,10 +198,10 @@ msgid "Add"
 msgstr "追加"
 
 msgid "Add VLAN interface"
-msgstr ""
+msgstr "VLANインタフェイスの追加"
 
 msgid "Add bond interface"
-msgstr ""
+msgstr "ボンディングインタフェイスの追加"
 
 msgid "Add devices to RAID device"
 msgstr "RAIDデバイスへの追加"
@@ -496,7 +496,7 @@ msgid "Bolivia"
 msgstr "ボリビア"
 
 msgid "Bond"
-msgstr ""
+msgstr "ボンディング"
 
 msgid "Bond options"
 msgstr "ボンディングのオプション"
@@ -769,7 +769,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS servers"
-msgstr ""
+msgstr "DNSサーバー"
 
 msgid "Daemon"
 msgstr "デーモン"
@@ -1019,13 +1019,13 @@ msgid "Edit SSL certificate"
 msgstr "SSL証明書の編集"
 
 msgid "Edit VLAN interface"
-msgstr ""
+msgstr "VLANインタフェースの編集"
 
 msgid "Edit bond interface"
-msgstr ""
+msgstr "ボンディングインタフェースの編集"
 
 msgid "Edit ethernet interface"
-msgstr ""
+msgstr "イーサネットインタフェースの編集"
 
 msgid "Edit firewall rule"
 msgstr "ファイアウォールルールの編集"
@@ -1257,7 +1257,7 @@ msgid "Failed to get list of network interface devices"
 msgstr "ネットワークインタフェースデバイスのリスト取得に失敗しました"
 
 msgid "Failed to get list of unused network interface devices"
-msgstr ""
+msgstr "未使用のネットワークインタフェースデバイスのリスト取得に失敗しました"
 
 msgid "Failed to get list of users."
 msgstr "ユーザーリストの取得に失敗しました。"
@@ -1667,7 +1667,7 @@ msgid "Invalid group name"
 msgstr "無効なグループ名"
 
 msgid "Invalid host name"
-msgstr ""
+msgstr "ホスト名が不正です"
 
 msgid "Invalid line: %s"
 msgstr "%s 行が不正です"
@@ -2282,7 +2282,7 @@ msgid "Paraguay"
 msgstr "パラグアイ"
 
 msgid "Parent interface"
-msgstr ""
+msgstr "親インタフェース"
 
 msgid "Passive FTP"
 msgstr "パッシブFTP"
@@ -2399,7 +2399,7 @@ msgstr "最初のボリュームを選択してください。"
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
-msgstr ""
+msgstr "新規ファイルの作成が許可されている場合、共有フォルダが公に書き込み可能かを確認してください。"
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2536,10 +2536,10 @@ msgid "RAID 10"
 msgstr "RAID 10"
 
 msgid "RAID 2"
-msgstr ""
+msgstr "RAID 2"
 
 msgid "RAID 3"
-msgstr ""
+msgstr "RAID 3"
 
 msgid "RAID 4"
 msgstr "RAID 4"
@@ -2626,7 +2626,7 @@ msgid "Remove"
 msgstr "削除"
 
 msgid "Remove devices from RAID device"
-msgstr ""
+msgstr "RAIDデバイスから削除"
 
 msgid "Replace"
 msgstr "置換"
@@ -2809,7 +2809,7 @@ msgid "Scheduling"
 msgstr "スケジューリング"
 
 msgid "Search domains"
-msgstr ""
+msgstr "検索するドメイン"
 
 msgid "Secondary email"
 msgstr "セカンダリメール"
@@ -2854,10 +2854,10 @@ msgid "Select a language ..."
 msgstr "言語を選択 ..."
 
 msgid "Select a parent interface ..."
-msgstr ""
+msgstr "親インタフェイスを選択 ..."
 
 msgid "Select a primary interface ..."
-msgstr ""
+msgstr "プライマリインタフェイスを選択 ..."
 
 msgid "Select a protocol ..."
 msgstr "プロトコルを選択 ..."
@@ -2878,7 +2878,7 @@ msgid "Select devices to be added to the RAID device"
 msgstr "RAIDデバイスに追加するデバイスを選択"
 
 msgid "Select devices to be removed from the RAID device."
-msgstr ""
+msgstr "RAIDデバイスから削除するデバイスを選択"
 
 msgid "Select or enter a user name ..."
 msgstr "ユーザー名を選択するか入力してください ..."
@@ -3129,7 +3129,7 @@ msgid "Specifies which slave is the primary device."
 msgstr "どのスレーブがプライマリデバイスかを指定します。"
 
 msgid "Speed"
-msgstr ""
+msgstr "スピード"
 
 msgid "Spindown time"
 msgstr "スピンダウンタイム"
@@ -3323,7 +3323,7 @@ msgid "The name of the share."
 msgstr "共有の名前。"
 
 msgid "The name servers are used to look up host names on the network."
-msgstr ""
+msgstr "ネームサーバは、ネットワーク上のホスト名を検索するために使用されます。"
 
 msgid "The number of days the certificate is valid for."
 msgstr "この日数だけ証明書は有効です。"
@@ -3441,27 +3441,27 @@ msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "このフィールドは、CIDR表記のIPv6ネットワークアドレスである必要があります"
 
 msgid "This field should be a domain name or an IP address"
-msgstr ""
+msgstr "このフィールドはドメイン名かIPアドレスである必要があります"
 
 msgid "This field should be a domain name or an IPv4 address"
-msgstr ""
+msgstr "このフィールドはドメイン名かIPv4アドレスである必要があります"
 
 msgid "This field should be a host name or an IP address"
-msgstr ""
+msgstr "このフィールドはホスト名かIPアドレスである必要があります"
 
 msgid "This field should be a host name or an IPv4 address"
-msgstr ""
+msgstr "このフィールドはホスト名かIPv4アドレスである必要があります"
 
 msgid "This field should be a list of domain names or IP addresses"
-msgstr ""
+msgstr "このフィールドはドメイン名かIPアドレスのリストである必要があります"
 
 msgid ""
 "This field should be a list of domain names or IP addresses seperated by <,>"
 " or <;>"
-msgstr ""
+msgstr "このフィールドは<,>または<;>で区切られたドメイン名かIPアドレスのリストである必要があります"
 
 msgid "This field should be a list of host names or IP addresses"
-msgstr ""
+msgstr "このフィールドはホスト名かIPアドレスのリストである必要があります"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3856,10 +3856,10 @@ msgid "Uzbekistan"
 msgstr "ウズベキスタン"
 
 msgid "VLAN"
-msgstr ""
+msgstr "VLAN"
 
 msgid "VLAN id"
-msgstr ""
+msgstr "VLAN id"
 
 msgid "Valid to"
 msgstr "有効期限"
