--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-18 01:40+0200\n"
-"PO-Revision-Date: 2015-04-17 23:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-04-18 03:11+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -199,10 +199,10 @@ msgid "Add"
 msgstr "添加"
 
 msgid "Add VLAN interface"
-msgstr ""
+msgstr "添加VLAN接口"
 
 msgid "Add bond interface"
-msgstr ""
+msgstr "添加绑定接口"
 
 msgid "Add devices to RAID device"
 msgstr "添加设备到RAID阵列中"
@@ -497,7 +497,7 @@ msgid "Bolivia"
 msgstr "玻利维亚"
 
 msgid "Bond"
-msgstr ""
+msgstr "绑定"
 
 msgid "Bond options"
 msgstr "Bond绑定选项"
@@ -770,7 +770,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS servers"
-msgstr ""
+msgstr "DNS服务器"
 
 msgid "Daemon"
 msgstr "守护进程"
@@ -1020,13 +1020,13 @@ msgid "Edit SSL certificate"
 msgstr "编辑SSL证书"
 
 msgid "Edit VLAN interface"
-msgstr ""
+msgstr "编辑VLAN接口"
 
 msgid "Edit bond interface"
-msgstr ""
+msgstr "编辑绑定接口"
 
 msgid "Edit ethernet interface"
-msgstr ""
+msgstr "编辑网络接口"
 
 msgid "Edit firewall rule"
 msgstr "编辑防火墙规则"
@@ -1258,7 +1258,7 @@ msgid "Failed to get list of network interface devices"
 msgstr "无法获取网络接口设备列表"
 
 msgid "Failed to get list of unused network interface devices"
-msgstr ""
+msgstr "无法获取闲置网络接口设备列表"
 
 msgid "Failed to get list of users."
 msgstr "无法获得用户列表。"
@@ -1656,7 +1656,7 @@ msgid "Installing updates ..."
 msgstr "安装更新中 ..."
 
 msgid "Interfaces"
-msgstr "网口"
+msgstr "接口"
 
 msgid "Invalid domain name"
 msgstr "无效域名"
@@ -1668,7 +1668,7 @@ msgid "Invalid group name"
 msgstr "无效组名称"
 
 msgid "Invalid host name"
-msgstr ""
+msgstr "无效主机名"
 
 msgid "Invalid line: %s"
 msgstr "无效行: %s"
@@ -2091,7 +2091,7 @@ msgid "Network"
 msgstr "网络"
 
 msgid "Network interface '%s' already exists"
-msgstr "网口 '%s' 已经存在"
+msgstr "接口 '%s' 已经存在"
 
 msgid "Neutral Zone"
 msgstr "中立区"
@@ -2283,7 +2283,7 @@ msgid "Paraguay"
 msgstr "巴拉圭"
 
 msgid "Parent interface"
-msgstr ""
+msgstr "父接口"
 
 msgid "Passive FTP"
 msgstr "被动式FTP"
@@ -2400,7 +2400,7 @@ msgstr "请选择一个卷。"
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
-msgstr ""
+msgstr "如果有新文件写入，请确保该共享文件夹开放公共写权限。"
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2537,10 +2537,10 @@ msgid "RAID 10"
 msgstr "RAID 10"
 
 msgid "RAID 2"
-msgstr ""
+msgstr "RAID 2"
 
 msgid "RAID 3"
-msgstr ""
+msgstr "RAID 3"
 
 msgid "RAID 4"
 msgstr "RAID 4"
@@ -2627,7 +2627,7 @@ msgid "Remove"
 msgstr "移除"
 
 msgid "Remove devices from RAID device"
-msgstr ""
+msgstr "从RAID阵列中删除设备"
 
 msgid "Replace"
 msgstr "取代"
@@ -2810,7 +2810,7 @@ msgid "Scheduling"
 msgstr "调度"
 
 msgid "Search domains"
-msgstr ""
+msgstr "搜索域名"
 
 msgid "Secondary email"
 msgstr "次要Email"
@@ -2855,10 +2855,10 @@ msgid "Select a language ..."
 msgstr "选择一种语言..."
 
 msgid "Select a parent interface ..."
-msgstr ""
+msgstr "选择一个父接口 ..."
 
 msgid "Select a primary interface ..."
-msgstr ""
+msgstr "选择一个主接口 ..."
 
 msgid "Select a protocol ..."
 msgstr "选择协议 ..."
@@ -2879,7 +2879,7 @@ msgid "Select devices to be added to the RAID device"
 msgstr "选择被添加到RAID的设备"
 
 msgid "Select devices to be removed from the RAID device."
-msgstr ""
+msgstr "选择要从RAID阵列中删除的设备。"
 
 msgid "Select or enter a user name ..."
 msgstr "选择或输入用户名 ..."
@@ -3130,7 +3130,7 @@ msgid "Specifies which slave is the primary device."
 msgstr "指定主从设备。"
 
 msgid "Speed"
-msgstr ""
+msgstr "速度"
 
 msgid "Spindown time"
 msgstr "停转时间"
@@ -3307,7 +3307,7 @@ msgid ""
 msgstr "可用软件信息已过期，你需要重载获取最新可用软件包信息。"
 
 msgid "The interface '%s' is already used by a bonding interface"
-msgstr "网口 '%s' 已经被绑定使用"
+msgstr "接口 '%s' 已经被绑定使用"
 
 msgid "The location of the files to share."
 msgstr "共享文件的位置。"
@@ -3324,7 +3324,7 @@ msgid "The name of the share."
 msgstr "共享名称。"
 
 msgid "The name servers are used to look up host names on the network."
-msgstr ""
+msgstr "该服务器名称是用来网络查询的主机名。"
 
 msgid "The number of days the certificate is valid for."
 msgstr "证书有效期天数。"
@@ -3442,27 +3442,27 @@ msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "此处应该是CIDR格式的IPv6地址"
 
 msgid "This field should be a domain name or an IP address"
-msgstr ""
+msgstr "此处应该是域名或者IP地址"
 
 msgid "This field should be a domain name or an IPv4 address"
-msgstr ""
+msgstr "此处应该是域名或者IPv4地址"
 
 msgid "This field should be a host name or an IP address"
-msgstr ""
+msgstr "此处应该是主机名或者IP地址"
 
 msgid "This field should be a host name or an IPv4 address"
-msgstr ""
+msgstr "此处应该是主机名或者IPv4地址"
 
 msgid "This field should be a list of domain names or IP addresses"
-msgstr ""
+msgstr "此处应该是域名或者IP地址列表"
 
 msgid ""
 "This field should be a list of domain names or IP addresses seperated by <,>"
 " or <;>"
-msgstr ""
+msgstr "此处应该是域名或者IP地址列表，使用<,> 或 <;>隔开。"
 
 msgid "This field should be a list of host names or IP addresses"
-msgstr ""
+msgstr "此处应该是一主机名或者IP地址列表"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3857,10 +3857,10 @@ msgid "Uzbekistan"
 msgstr "乌兹别克斯坦"
 
 msgid "VLAN"
-msgstr ""
+msgstr "VLAN"
 
 msgid "VLAN id"
-msgstr ""
+msgstr "VLAN id"
 
 msgid "Valid to"
 msgstr "有效期至"
