--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-18 01:40+0200\n"
-"PO-Revision-Date: 2015-04-17 23:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-04-18 23:56+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -199,10 +199,10 @@ msgid "Add"
 msgstr "新增"
 
 msgid "Add VLAN interface"
-msgstr ""
+msgstr "新增 VLAN 介面"
 
 msgid "Add bond interface"
-msgstr ""
+msgstr "新增結合介面"
 
 msgid "Add devices to RAID device"
 msgstr "新增裝置到 RAID 裝置中"
@@ -497,7 +497,7 @@ msgid "Bolivia"
 msgstr "玻利維亞"
 
 msgid "Bond"
-msgstr ""
+msgstr "結合"
 
 msgid "Bond options"
 msgstr "結合選項"
@@ -770,7 +770,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS servers"
-msgstr ""
+msgstr "DNS 伺服器"
 
 msgid "Daemon"
 msgstr "幕後服務程式"
@@ -1020,13 +1020,13 @@ msgid "Edit SSL certificate"
 msgstr "編輯 SSL 證書"
 
 msgid "Edit VLAN interface"
-msgstr ""
+msgstr "編輯 VLAN 介面"
 
 msgid "Edit bond interface"
-msgstr ""
+msgstr "編輯結合介面"
 
 msgid "Edit ethernet interface"
-msgstr ""
+msgstr "編輯乙太網路介面"
 
 msgid "Edit firewall rule"
 msgstr "編輯防火牆規則"
@@ -1258,7 +1258,7 @@ msgid "Failed to get list of network interface devices"
 msgstr "無法取得網路介面裝置的列表"
 
 msgid "Failed to get list of unused network interface devices"
-msgstr ""
+msgstr "無法取得未用網路介面裝置的列表"
 
 msgid "Failed to get list of users."
 msgstr "無法取得用戶的列表。"
@@ -1668,7 +1668,7 @@ msgid "Invalid group name"
 msgstr "不合法的群組名稱"
 
 msgid "Invalid host name"
-msgstr ""
+msgstr "不合法的主機名稱"
 
 msgid "Invalid line: %s"
 msgstr "不合法的匯入行：%s"
@@ -2283,7 +2283,7 @@ msgid "Paraguay"
 msgstr "巴拉圭"
 
 msgid "Parent interface"
-msgstr ""
+msgstr "上層介面"
 
 msgid "Passive FTP"
 msgstr "被動式 FTP"
@@ -2400,7 +2400,7 @@ msgstr "請先選擇一個磁碟。"
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
-msgstr ""
+msgstr "如果允許新增檔案，請確定該共享檔案夾是公開可寫入。"
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2537,10 +2537,10 @@ msgid "RAID 10"
 msgstr "RAID 10"
 
 msgid "RAID 2"
-msgstr ""
+msgstr "RAID 2"
 
 msgid "RAID 3"
-msgstr ""
+msgstr "RAID 3"
 
 msgid "RAID 4"
 msgstr "RAID 4"
@@ -2627,7 +2627,7 @@ msgid "Remove"
 msgstr "移除"
 
 msgid "Remove devices from RAID device"
-msgstr ""
+msgstr "將裝置從 RAID 裝置上移除"
 
 msgid "Replace"
 msgstr "取代"
@@ -2810,7 +2810,7 @@ msgid "Scheduling"
 msgstr "工作排程"
 
 msgid "Search domains"
-msgstr ""
+msgstr "搜尋網域"
 
 msgid "Secondary email"
 msgstr "次要電子郵件"
@@ -2855,10 +2855,10 @@ msgid "Select a language ..."
 msgstr "選擇一種語言 ..."
 
 msgid "Select a parent interface ..."
-msgstr ""
+msgstr "選擇一個上層介面 ..."
 
 msgid "Select a primary interface ..."
-msgstr ""
+msgstr "選擇一個主要介面 ..."
 
 msgid "Select a protocol ..."
 msgstr "選擇一個通訊協定 ..."
@@ -2879,7 +2879,7 @@ msgid "Select devices to be added to the RAID device"
 msgstr "選擇將被添加到 RAID 的裝置"
 
 msgid "Select devices to be removed from the RAID device."
-msgstr ""
+msgstr "選擇將從 RAID 裝置上移除的裝置。"
 
 msgid "Select or enter a user name ..."
 msgstr "選擇或輸入一個用戶名稱 ..."
@@ -3130,7 +3130,7 @@ msgid "Specifies which slave is the primary device."
 msgstr "指定哪個隸屬介面是主要的裝置。"
 
 msgid "Speed"
-msgstr ""
+msgstr "速度"
 
 msgid "Spindown time"
 msgstr "旋轉停止時間"
@@ -3324,7 +3324,7 @@ msgid "The name of the share."
 msgstr "該共享的名稱。"
 
 msgid "The name servers are used to look up host names on the network."
-msgstr ""
+msgstr "這些名稱伺服器是被用來在網路上查詢主機名稱。"
 
 msgid "The number of days the certificate is valid for."
 msgstr "證書有效的天數。"
@@ -3442,27 +3442,27 @@ msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "此欄位應該是一個以 CIDR 表示法的 IPv6 網路位址"
 
 msgid "This field should be a domain name or an IP address"
-msgstr ""
+msgstr "此欄位應該是一個網域名稱或 IP 地址"
 
 msgid "This field should be a domain name or an IPv4 address"
-msgstr ""
+msgstr "此欄位應該是一個網域名稱或 IPv4 地址"
 
 msgid "This field should be a host name or an IP address"
-msgstr ""
+msgstr "此欄位應該是一個主機名稱或 IP 地址"
 
 msgid "This field should be a host name or an IPv4 address"
-msgstr ""
+msgstr "此欄位應該是一個主機名稱或 IPv4 地址"
 
 msgid "This field should be a list of domain names or IP addresses"
-msgstr ""
+msgstr "此欄位應該是一份網域名稱或 IP 地址的列表"
 
 msgid ""
 "This field should be a list of domain names or IP addresses seperated by <,>"
 " or <;>"
-msgstr ""
+msgstr "此欄位應該是一份以<,>或<;>分隔之網域名稱或 IP 地址的列表"
 
 msgid "This field should be a list of host names or IP addresses"
-msgstr ""
+msgstr "此欄位應該是一份主機名稱或 IP 地址的列表"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3857,10 +3857,10 @@ msgid "Uzbekistan"
 msgstr "烏茲別克斯坦"
 
 msgid "VLAN"
-msgstr ""
+msgstr "VLAN"
 
 msgid "VLAN id"
-msgstr ""
+msgstr "VLAN 識別碼"
 
 msgid "Valid to"
 msgstr "有效期到"
