--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.5) stable; urgency=low
+
+  * Various JS code improvements in the WebGUI.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 23 Apr 2015 21:59:39 +0200
+
 openmediavault (2.0.4) stable; urgency=low
 
   * Update locales.
