--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -55,6 +55,12 @@ openmediavault (2.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Feb 2015 09:50:29 +0100
 
+openmediavault (1.19) stable; urgency=low
+
+  * Various code improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 May 2015 19:31:23 +0200
+
 openmediavault (1.18) stable; urgency=low
 
   * Mantis 0001302: Increase "wipe" size to also remove other file
