--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -10,6 +10,7 @@ openmediavault (2.0.5) stable; urgency=low
   * Mantis 0001315: Add udev rule to populate rotational flag for
     Samsung 840 SSD.
   * Mantis 0001318: Improve non-rotational device detection.
+  * Mantis 0001320: Recreate mount paths if they're don't exist.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 23 Apr 2015 21:59:39 +0200
 
