--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-18 01:40+0200\n"
-"PO-Revision-Date: 2015-04-17 23:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-04-30 06:38+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -497,7 +497,7 @@ msgid "Bolivia"
 msgstr "Bolívia"
 
 msgid "Bond"
-msgstr ""
+msgstr "Köteg"
 
 msgid "Bond options"
 msgstr "Kötési opciók"
@@ -770,7 +770,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS servers"
-msgstr ""
+msgstr "DNS szerverek"
 
 msgid "Daemon"
 msgstr "Démon"
@@ -2537,10 +2537,10 @@ msgid "RAID 10"
 msgstr "RAID 10"
 
 msgid "RAID 2"
-msgstr ""
+msgstr "RAID 2"
 
 msgid "RAID 3"
-msgstr ""
+msgstr "RAID 3"
 
 msgid "RAID 4"
 msgstr "RAID 4"
@@ -3130,7 +3130,7 @@ msgid "Specifies which slave is the primary device."
 msgstr "Annak meghatározása, melyik kiszolgáló legyen az elsődleges eszköz."
 
 msgid "Speed"
-msgstr ""
+msgstr "Sebesség"
 
 msgid "Spindown time"
 msgstr "Leállítási idő"
@@ -3857,10 +3857,10 @@ msgid "Uzbekistan"
 msgstr "Üzbegisztán"
 
 msgid "VLAN"
-msgstr ""
+msgstr "VLAN"
 
 msgid "VLAN id"
-msgstr ""
+msgstr "VLAN az."
 
 msgid "Valid to"
 msgstr "Érvényes"
