* Mantis 0001312: Prefer Ext.state.LocalStorageProvider over Ext.state.CookieProvider to avoid large headers. * Modify user dialog height.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,7 @@
 openmediavault (2.0.6) stable; urgency=low
 
+  * Mantis 0001312: Prefer Ext.state.LocalStorageProvider over
+    Ext.state.CookieProvider to avoid large headers.
   * Mantis 0001320: Recreate mount paths if they're don't exist.
   * Mantis 0001322: File is still created with unparsable JSON.
 
